<resources>
    <string name="app_name">Map-Z</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="see_description">보기</string>
    <string name="confirm">확인</string>

    <string name="main_menu_home_title">Home</string>
    <string name="main_menu_search_title">Search</string>
    <string name="main_menu_write_title">Write</string>
    <string name="main_menu_my_page_title">My Page</string>
    <string name="format_home_count">Zoom Level: %f</string>
    <string name="format_search_count">Search %d</string>
    <string name="format_write_count">Write %d</string>
    <string name="format_my_page_count">My Page %d</string>
    <string name="menu_item_confirm">완료</string>
    <string name="write_editor_placeholder">사진과 장소에 맞는 재미있는 일기를 작성해주세요.</string>

    <string name="sign_in_title">Login</string>
    <string name="sign_in_email">E-mail</string>
    <string name="sign_in_pwd">Password</string>
    <string name="sign_in_find_email">아이디 찾기</string>
    <string name="sign_in_find_pwd">비밀번호 찾기</string>
    <string name="sign_in_keep_login">자동 로그인</string>
    <string name="sign_in_sign_in">로그인</string>
    <string name="sign_in_sign_up">회원가입하기</string>
    <string name="sign_in_google_sign_up">구글 계정으로 로그인하기</string>
    <string name="sign_up_title">이메일/비밀번호 설정</string>

    <string name="sign_up_pwd_check">비밀번호 확인</string>
    <string name="sign_up_email_condition">영문, 숫자 조합 8자 이상</string>
    <string name="sign_up_pwd_condition">영문, 숫자 조합 8자 이상</string>
    <string name="sign_up_profile_title">프로필 설정</string>
    <string name="sign_up_profile_nickname_condition">최대 12자</string>
    <string name="sign_up_agree_title_description">Map-Z에 오신 것을 환영합니다.</string>
    <string name="sign_up_agree_description">Map-Z의 기능을 사용하기 위해서\n새로운 약관 동의가 필요합니다.\n약관에 동의하시고 Map-Z로\n친구들과의 추억을 기록해보세요.</string>
    <string name="sign_up_agree_item_1">개인정보 수집 및 이용 안내</string>
    <string name="sign_up_agree_item_2">제 3자 제공 동의</string>
    <string name="sign_up_agree_item_3">제 3자 제공 동의</string>
    <string name="sign_up_agree_all"><b>전체동의</b></string>
    <string name="sign_up_agree_all_description">(선택) 제 3자 제공 동의를 포함하여 모두 동의합니다.</string>
    <string name="sign_up_agree_required">(필수)</string>
    <string name="sign_up_agree_optional">(선택)</string>
    <string name="sign_up_cert_request">인증번호 요청</string>
    <string name="sign_up_cert_write">인증번호 입력</string>
    <string name="sign_up_time_remain">남은 시간 %d</string>
    <string name="sign_up_cert_wrong">인증번호가 잘못 입력되었습니다.</string>
    <string name="sign_up_cert_complete">인증번호 확인 완료</string>

    <string name="my_page_sign_out">로그아웃</string>

    <string name="search_title">친구들과 함께 할\n교환일기를 찾아봐요.</string>
    <string name="search_recent">최근 검색</string>
    <string name="search_group_join_created_at">개설일 %s</string>
    <string name="search_group_join">그룹 가입하기</string>
    <string name="search_group_join_request">%s의 그룹장에게\n가입요청이 전달되었습니다.</string>
    <string name="search_group_join_request_description">가입이 승인되면 홈에서\n가입된 그룹을 볼 수 있어요!</string>

    <string name="groups_title">일기 작성</string>
    <string name="format_write_number_of_group_members">+ %d</string>
    <string name="picture_title">사진 선택하기</string>
    <string name="picture_desc">친구들과의 추억이 담긴 사진을 선택해주세요.</string>
    <string name="picture_button">사진 가져오기</string>
    <string name="picture_permission_rationale">파일 및 미디어 액세스 권한을 허용하지 않으면 일부 사진을 가져올 수 없습니다.</string>
    <string name="picture_set_permission">모든 사진에 접근하려면 파일 및 미디어 액세스 권한을 허용해주세요.</string>
    <string name="picture_snackbar_action">설정</string>
    <string name="location_title">위치 확인하기</string>
    <string name="location_confirm">위치 확인하기 완료</string>
    <string name="write_title">일기 작성하기</string>
    <string name="common_title">제목</string>
    <string name="write_title_hint">추억의 제목을 작성해봐요.</string>
    <string name="write_select_font_family_title">글꼴 선택</string>
    <string name="write_select_font_size_title">글꼴 크기</string>
    <string name="write_tool_font_1_name">DX 영화자막</string>
    <string name="write_tool_font_2_name">Noto Sans</string>
    <string name="write_tool_font_3_name">애플산돌고딕</string>
    <string name="font_size_16">16</string>
    <string name="font_size_14">14</string>
    <string name="font_size_12">12</string>
    <string name="font_size_10">10</string>
    <string name="write_align_title">텍스트 정렬</string>
    <string name="write_align_left">왼쪽 정렬</string>
    <string name="write_align_center">중앙 정렬</string>
    <string name="write_align_right">오른쪽 정렬</string>
</resources>
