<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_dest"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/main_menu_home_title" />
    <item
        android:id="@+id/search_dest"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_search"
        android:title="@string/main_menu_search_title" />
    <item
        android:id="@+id/write_dest"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_write"
        android:title="@string/main_menu_write_title" />
    <item
        android:id="@+id/my_page_dest"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_my_page"
        android:title="@string/main_menu_my_page_title" />
</menu>
