<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_font_1"
        android:text="@string/write_tool_font_1_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/write_select_font_item_selected" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_font_2"
        style="@style/write_select_font_item_default"
        android:layout_marginTop="@dimen/write_select_font_item_vertical_margin"
        android:text="@string/write_tool_font_2_name"
        app:layout_constraintTop_toBottomOf="@id/tv_font_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_font_3"
        style="@style/write_select_font_item_default"
        android:layout_marginTop="@dimen/write_select_font_item_vertical_margin"
        android:text="@string/write_tool_font_3_name"
        app:layout_constraintTop_toBottomOf="@id/tv_font_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
