<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/map_z_red_500"
        tools:context=".ui.login.SignUpFragment">

        <TextView
            android:id="@+id/btn_sign_up_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_small"
            android:background="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/tv_sign_up_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_sign_up_title" />

        <TextView
            android:id="@+id/tv_sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sign_up_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xx_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_sign_up_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_top_round"
                android:backgroundTint="@color/white"
                android:paddingBottom="@dimen/space_max_large">

                <TextView
                    android:id="@+id/tv_sign_up_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xx_large"
                    android:layout_marginTop="@dimen/space_xx_large"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sign_up_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_sign_up_email"
                    style="@style/Theme.MapZ.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_small"
                    android:layout_marginEnd="@dimen/space_xx_large"
                    android:inputType="textWebEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_email" />

                <TextView
                    android:id="@+id/tv_sign_up_email_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_small"
                    android:text="@string/sign_up_email_condition"
                    android:textColor="@color/map_z_red_500"
                    android:textSize="@dimen/sign_up_condition_text"
                    app:layout_constraintEnd_toEndOf="@id/et_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_email" />

                <TextView
                    android:id="@+id/tv_sign_up_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x_large"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sign_up_text"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_email_condition" />

                <EditText
                    android:id="@+id/et_sign_up_pwd"
                    style="@style/Theme.MapZ.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_small"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/et_sign_up_email"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pwd" />

                <TextView
                    android:id="@+id/tv_sign_up_pwd_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_small"
                    android:text="@string/sign_up_pwd_condition"
                    android:textColor="@color/map_z_red_500"
                    android:textSize="@dimen/sign_up_condition_text"
                    app:layout_constraintEnd_toEndOf="@id/et_sign_up_pwd"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_pwd" />

                <TextView
                    android:id="@+id/tv_sign_up_pwd_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x_large"
                    android:text="@string/sign_up_pwd_check"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sign_up_text"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pwd_condition" />

                <EditText
                    android:id="@+id/et_sign_up_pwd_check"
                    style="@style/Theme.MapZ.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xx_small"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/et_sign_up_email"
                    app:layout_constraintStart_toStartOf="@id/tv_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pwd_check" />

                <TextView
                    android:id="@+id/btn_sign_up_next"
                    style="@style/Theme.MapZ.Button.Default"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_button_next_top"
                    android:backgroundTint="@color/gray_extra_300"
                    android:elevation="0dp"
                    android:text="@string/next"
                    app:layout_constraintEnd_toEndOf="@id/et_sign_up_email"
                    app:layout_constraintStart_toStartOf="@id/et_sign_up_email"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_pwd_check" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
